menambakan deskripsi about me

--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@
       <div class="about-content">
         <h3>Data Science Student at Telkom University</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, ducimus
-          perspiciatis minima porro commodi nemo excepturi at dolor cumque
-          fugiat, eum tempore! Saepe molestiae suscipit minus quos nostrum
-          veritatis cupiditate.
+          Let me introduce myself, my name is Steven Immanuel C Girsang. I am a
+          student at Telkom University majoring in Bachelor of Data Science. I
+          like to explore many things. and because of that I have many hobbies
+          such as playing games, designing, photos and editing videos. If you
+          want to see more of my abilities or you want to play games with me you
+          can contact me.
         </p>
 
         <div class="btn-box btns">
