fix foto dan video error

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <div class="slide" id="slide1">
             <video autoplay loop muted plays-inline class="slide-video">
               <source
-                src="/Image/Portofolio/vid 1.mp4"
+                src="Image/Portofolio/vid 1.mp4"
                 type="video/mp4"
               />
             </video>
@@ -257,7 +257,7 @@
           <div class="slide" id="slide2">
             <video autoplay loop muted plays-inline class="slide-video">
               <source
-                src="/Image/Portofolio/vid 2.mp4"
+                src="Image/Portofolio/vid 2.mp4"
                 type="video/mp4"
               />
             </video>
@@ -265,7 +265,7 @@
           <div class="slide" id="slide3">
             <video autoplay loop muted plays-inline class="slide-video">
               <source
-                src="/Image/Portofolio/vid 3.mp4"
+                src="Image/Portofolio/vid 3.mp4"
                 type="video/mp4"
               />
             </video>
@@ -283,7 +283,7 @@
           <div class="slide" id="slide1">
             <video autoplay loop muted plays-inline class="slide-video">
               <source
-                src="/Image/Portofolio/vid 1.mp4"
+                src="Image/Portofolio/vid 1.mp4"
                 type="video/mp4"
               />
             </video>
@@ -291,7 +291,7 @@
           <div class="slide" id="slide2">
             <video autoplay loop muted plays-inline class="slide-video">
               <source
-                src="/Image/Portofolio/vid 2.mp4"
+                src="Image/Portofolio/vid 2.mp4"
                 type="video/mp4"
               />
             </video>
@@ -299,7 +299,7 @@
           <div class="slide" id="slide3">
             <video autoplay loop muted plays-inline class="slide-video">
               <source
-                src="/Image/Portofolio/vid 3.mp4"
+                src="Image/Portofolio/vid 3.mp4"
                 type="video/mp4"
               />
             </video>
@@ -307,7 +307,7 @@
           <div class="slide" id="slide4">
             <video autoplay loop muted plays-inline class="slide-video">
               <source
-                src="/Image/Portofolio/vid 4.mp4"
+                src="Image/Portofolio/vid 4.mp4"
                 type="video/mp4"
               />
             </video>
@@ -319,73 +319,73 @@
         <div class="slide-track2" id="pictureSlideTrack">
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 1.jpg"
+              src="Image/Portofolio/pic 1.jpg"
               alt="Work 1"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 2.jpg"
+              src="Image/Portofolio/pic 2.jpg"
               alt="Work 2"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 3.jpg"
+              src="Image/Portofolio/pic 3.jpg"
               alt="Work 3"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 4.jpg"
+              src="Image/Portofolio/pic 4.jpg"
               alt="Work 4"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 5.jpg"
+              src="Image/Portofolio/pic 5.jpg"
               alt="Work 5"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 6.jpg"
+              src="Image/Portofolio/pic 6.jpg"
               alt="Work 6"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 1.jpg"
+              src="Image/Portofolio/Photography/photo 1.jpg"
               alt="Photography 1"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 2.jpg"
+              src="Image/Portofolio/Photography/photo 2.jpg"
               alt="Photography 2"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 3.jpg"
+              src="Image/Portofolio/Photography/photo 3.jpg"
               alt="Photography 3"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 4.jpg"
+              src="Image/Portofolio/Photography/photo 4.jpg"
               alt="Photography 4"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 5.jpg"
+              src="Image/Portofolio/Photography/photo 5.jpg"
               alt="Photography 5"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 6.jpg"
+              src="Image/Portofolio/Photography/photo 6.jpg"
               alt="Photography 6"
             />
           </div>
@@ -393,73 +393,73 @@
           <!-- double Picture Slide -->
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 1.jpg"
+              src="Image/Portofolio/pic 1.jpg"
               alt="Work 1"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 2.jpg"
+              src="Image/Portofolio/pic 2.jpg"
               alt="Work 2"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 3.jpg"
+              src="Image/Portofolio/pic 3.jpg"
               alt="Work 3"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 4.jpg"
+              src="Image/Portofolio/pic 4.jpg"
               alt="Work 4"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 5.jpg"
+              src="Image/Portofolio/pic 5.jpg"
               alt="Work 5"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/pic 6.jpg"
+              src="Image/Portofolio/pic 6.jpg"
               alt="Work 6"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 1.jpg"
+              src="Image/Portofolio/Photography/photo 1.jpg"
               alt="Photography 1"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 2.jpg"
+              src="Image/Portofolio/Photography/photo 2.jpg"
               alt="Photography 2"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 3.jpg"
+              src="Image/Portofolio/Photography/photo 3.jpg"
               alt="Photography 3"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 4.jpg"
+              src="Image/Portofolio/Photography/photo 4.jpg"
               alt="Photography 4"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 5.jpg"
+              src="Image/Portofolio/Photography/photo 5.jpg"
               alt="Photography 5"
             />
           </div>
           <div class="slide-picture">
             <img
-              src="/Image/Portofolio/Photography/photo 6.jpg"
+              src="Image/Portofolio/Photography/photo 6.jpg"
               alt="Photography 6"
             />
           </div>
