--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </div>
 
       <div class="about-content">
-        <h3>Data Science Student at Telkom University</h3>
+        <h3>Data Science Student</h3>
         <p>
           Let me introduce myself, my name is Steven Immanuel C Girsang. I am a
           student at Telkom University majoring in Bachelor of Data Science. I
