Delete Contact Session

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
       </div>
     </section>
 
-    <!-- Contact Section design -->
+    <!-- Contact Section design
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
       <form action="#">
@@ -508,7 +508,7 @@
           <button type="submit" class="btn">Submit</button>
         </div>
       </form>
-    </section>
+    </section> -->
 
     <!-- footer design -->
     <footer class="footer">
