--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
         <a href="#work">My Work</a>
-        <a href="#contact">Contact</a>
+        <!-- <a href="#contact">Contact</a> -->
 
         <span class="active-nav"></span>
       </nav>
