change link instagram

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </p>
 
         <div class="btn-box btns">
-          <a href="t.me/stevenchristiano" class="btn">Contact Me</a>
+          <a href="https://www.instagram.com/_stev.chris/" class="btn">Contact Me</a>
         </div>
       </div>
     </section>
