menambahkan link spotify dan discord

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
         <a href="#work">My Work</a>
+        <a href="#other">Other</a>
         <!-- <a href="#contact">Contact</a> -->
 
         <span class="active-nav"></span>
@@ -106,6 +107,9 @@
         <a href="https://twitter.com/_Stevchris"
           ><i class="bx bxl-twitter"></i
         ></a>
+        <a href="https://discord.gg/DZZkh25P74">
+          <i class="bx bxl-discord "></i>
+        </a>
       </div>
     </section>
 
@@ -509,6 +513,12 @@
         </div>
       </form>
     </section> -->
+
+    <!-- Spotify Section -->
+    <section class="other" id="other">
+      <h2 class="heading">Other</h2>
+      <div id="playlist "></div>
+    </section>
 
     <!-- footer design -->
     <footer class="footer">
